[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Scene/SceneControl.gd" type="Script" id=1]
[ext_resource path="res://Objects/Scene/Music.gd" type="Script" id=2]
[ext_resource path="res://Objects/Scene/FloorSpawner.gd" type="Script" id=3]
[ext_resource path="res://Objects/Scene/PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://Objects/Scene/EditCamera.gd" type="Script" id=5]

[sub_resource type="AudioStreamSample" id=1]

[node name="SceneControl" type="Node"]
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
volume_db = -20.0
script = ExtResource( 2 )

[node name="FloorSpawner" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="PlayerCamera" type="Camera" parent="."]
size = 0.1
script = ExtResource( 4 )

[node name="EditCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 30, 0 )
size = 0.1
script = ExtResource( 5 )
